--- a/templates/algorithm.html
+++ b/templates/algorithm.html
@@ -141,6 +141,16 @@
         </tr>
     </table>
 </div>
+  <div class="info_cultures">
+    <h2>Detalhes da cultura resultante</h2>
+    <ul>
+      <li>Cultura: {{selected_culture['name']}}</li>
+      <li>Solo: {{selected_culture['soil']}}</li>
+      <li>Altitude: {{selected_culture['altitude']}}</li>
+      <li>Clima: {{selected_culture['climate']}}</li>
+      <li>Irrigação: {{selected_culture['irrigation']}}</li>
+    </ul>
+  </div>
     {% endif %}
   </div>
 
