--- a/static/algorithm.css
+++ b/static/algorithm.css
@@ -165,3 +165,13 @@ caption{
 #diff{
   background-color: #4dbf59;
 }
+
+h2{
+  text-align: center;
+  color: white;
+}
+
+ul{
+  font-size: 2.5vh;
+  color: white;
+}
